[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Background/Pink.png" type="Texture" id=1]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Menu/Buttons/Play.png" type="Texture" id=3]
[ext_resource path="res://fonts/poco/Poco.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/GameStart/GameStart.gd" type="Script" id=5]
[ext_resource path="res://Assets/Audio/TitleScreen.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/PressEnter.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 5
outline_color = Color( 0.188235, 0.180392, 0.243137, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "press_start"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/StartVBox/StartButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.784314, 0.784314, 0.784314, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/StartVBox/StartButton:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="GameStart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
modulate = Color( 0.494118, 0.784314, 1, 1 )
margin_top = 25.0
margin_right = 384.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 3 )
text = "platformer
tutorial"
align = 1
uppercase = true

[node name="StartVBox" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 384.0
margin_bottom = 230.0
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer/StartVBox"]
margin_right = 384.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="StartLabel" type="Label" parent="VBoxContainer/StartVBox"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 60.0
margin_right = 384.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "press space or enter key"
align = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/press_start = SubResource( 2 )

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[connection signal="button_up" from="VBoxContainer/StartVBox/StartButton" to="." method="_on_StartButton_button_up"]
